# garden-watcher

./: .gitignore  README.md  app.py  dogsound.py  framegrab.yaml  groundlight-app.yaml  pyproject.toml  requirements.txt  trybark.py  trycamera.py
