[tool.poetry]
name = "deerbark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
framegrab = "^0.5.2"
groundlight = "^0.16.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
